WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
11099
HttpSendRequestEx results in ERROR_HTTP_HEADER_NOT_FOUND
https://bugs.webkit.org/show_bug.cgi?id=11099
Summary
HttpSendRequestEx results in ERROR_HTTP_HEADER_NOT_FOUND
Darin Fisher (:fishd, Google)
Reported
2006-09-30 10:19:07 PDT
I've noticed that HttpSendRequestEx sometimes returns ERROR_HTTP_HEADER_NOT_FOUND, which I believe is caused by the lpcszHeader member of the INTERNET_BUFFERS struct being a garbage pointer. Note: the CString object returned by headers.latin1() is a temporary, and ResourceLoaderWin is making the mistake of using it beyond its lifetime. Patch coming up...
Attachments
minimal patch
(1.54 KB, patch)
2006-10-02 18:51 PDT
,
Darin Fisher (:fishd, Google)
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Darin Fisher (:fishd, Google)
Comment 1
2006-10-02 18:51:56 PDT
Created
attachment 10875
[details]
minimal patch
Darin Adler
Comment 2
2006-10-02 19:36:05 PDT
Comment on
attachment 10875
[details]
minimal patch r=me
Mark Rowe (bdash)
Comment 3
2006-10-03 18:14:11 PDT
Landed in
r16757
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug