2006-10-03  MorganL  <morganl.webkit@yahoo.com>

Reviewed by Darin.

        Fixes: http://bugs.webkit.org/show_bug.cgi?id=11099
        HttpSendRequestEx results in ERROR_HTTP_HEADER_NOT_FOUND

        * platform/win/ResourceLoaderWin.cpp:
        (WebCore::ResourceLoader::onHandleCreated):



Canonical link: https://commits.webkit.org/14062@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@16757 268f45cc-cd09-0410-ab3c-d52691b4dbfc